--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "antd-demo",
   "version": "0.1.0",
   "private": true,
+  "homepage": "./",
   "dependencies": {
+    "antd": "^5.26.5",
     "cra-template": "1.3.0",
     "react": "^19.1.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^19.1.0",
     "react-scripts": "5.0.1"
   },
