解析方法修改

--- a/project.config.json
+++ b/project.config.json
@@ -1,6 +1,6 @@
 {
   "compileType": "miniprogram",
-  "libVersion": "trial",
+  "libVersion": "3.8.10",
   "packOptions": {
     "ignore": [],
     "include": []
